--- a/public/reset.css
+++ b/public/reset.css
@@ -71,11 +71,23 @@ td:not([align]),
 th:not([align]) {
   text-align: left;
 }
-a{
-	text-decoration: none;
-	color:black;
+a,
+a:hover,
+a:visited,
+a:link,
+a:active {
+  text-decoration: none;
+  color: black;
+  outline: none;
+  border: none;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  -webkit-tap-highlight-color: transparent;
+  outline: none;
 }
-li{
+li {
   list-style: none;
 }
-
+#root {
+  height: 100%;
+  width: 100%;
+}
