--- a/src/style/Search.scss
+++ b/src/style/Search.scss
@@ -1,28 +1,54 @@
-
-
 //声明变量使用$开头
 //1.选择器嵌套
 //变量
 
-//minin，声明函数 
+//minin，声明函数
 //minin 是一个函数。可以接受一个值
 @mixin log($red) {
-	border: 1px solid $red;
+  border: 1px solid $red;
 }
-.Search{
-	p{
-
-	}
+.Search {
+  height: 52px;
+  display: flex;
+  justify-content: space-between;
+  border-bottom: 1px solid rgb(153, 154, 156);
+  input {
+    height: 32px;
+    background-color: hsla(0,0%,92.2%,.72);
+    border-radius: 16px;
+    color: #999;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-left: 10px;
+    outline: none;
+  }
+  button {
+    margin-left: 10px;
+    outline: none;
+  }
+}
+.logo{
+  height: 32px;
+  padding-right: 20px;
 }
 
-$width:10px;
-$height: $width+10px;
+$width: 10px;
+$height: $width + 10px;
 
- .Search{
-	display: flex;
-	justify-content: center;
-	align-items:center;
-	background: chocolate;
-	@include log(red)
+.Search {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: rgb(255, 255, 255);
+  button{
+    background: rgb(0, 132, 255);
+  }
 }
-
+#root {
+  background: #e2dcdc;
+}
+.icon{
+  width: 56px;
+  height: 28px;
+}
