--- a/src/style/Weather.scss
+++ b/src/style/Weather.scss
@@ -2,21 +2,51 @@
 @mixin log {
 	border:1px solid black
 }
-.city{
-	width: 100%;
-}
+
 .Weather-content{
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
 	div{
-	max-height: 100%;
+		width: 100%;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		flex-direction: column;
 	}
 	li{
-		height: 80px;
-		width: 80%;
+		width: 100%;
 		flex: 1;
-		@include log()
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		border-bottom: 1px solid rgb(153, 154, 156);
 	}
+}
+.sendCity{
+	display: flex;
+	height: 30px;
+	justify-content: space-between;
+	white-space: nowrap;
+	margin-top: 20px;
+	input{
+		padding-left: 10px;
+		flex: 3;
+	}
+	button{
+		flex: 0.5;
+		margin-left: 10px;
+		border: none;
+		border-radius: 4px;
+		background: rgb(0, 132, 255);
+		color: whitesmoke;
+	}
+}
+img{
+	max-width:50% ;
+	max-height: 100%;
+}
+#root{
+	background: #ffffff;
 }
