--- a/src/style/Route.module.css
+++ b/src/style/Route.module.css
@@ -1,14 +1,16 @@
-.title{
-	display: flex;
-	flex-direction: row;
-	background: #fafafa;
-	width: 100%;
+.title {
+  display: flex;
+  flex-direction: row;
+  background: #fafafa;
+  width: 100%;
 }
-.nav{
-	width: 100%;
+.nav {
+  width: 100%;
 }
 
-.link{
-	flex: 1;
-	text-align: center;
+.link {
+  flex: 1;
+  text-align: center;
+  text-decoration: none;
+  color: black;
 }
