--- a/src/style/Question.scss
+++ b/src/style/Question.scss
@@ -2,13 +2,19 @@ $color: black;
 @mixin border($color) {
   border: 1px solid $color;
 }
+
 .question-main {
+  display: flex;
+  flex-direction: column;
+
   ul {
     display: flex;
+    flex-grow: 1;
     justify-content: center;
     align-items: center;
     flex-direction: column;
     background: red($color: #000000);
+    overflow: auto;
 
     > div {
       > li {
@@ -16,26 +22,31 @@ $color: black;
         @include border(rgb(235, 235, 235));
       }
     }
+
     .Hot-item {
       width: 100%;
       display: flex;
       flex-direction: row;
       padding: 8px 8px 8px 0;
-	  border-bottom: 1px solid #ebebeb;
-	  position: relative;
+      border-bottom: 1px solid #ebebeb;
+      position: relative;
+
       .Hot-item :not(:first-child) {
         border: 1px solid #ebebeb;
-	  }
-	  .star{
-		  position: absolute;
-		  left: 20px;
-		  top: 18%;
-	  }
+      }
+
+      .star {
+        position: absolute;
+        left: 20px;
+        top: 18%;
+      }
+
       .Index {
         text-align: center;
         margin: 10px;
         flex: 1;
       }
+
       .Title-Container {
         display: flex;
         flex: 4;
@@ -44,20 +55,22 @@ $color: black;
     }
   }
 }
+
 //white-space: nowrap; 这个属性，针对汉子会换行，添加不换行周可以实现左右滑动
 .bigVlist {
   display: flex;
   flex-direction: row;
   overflow: auto;
   flex-wrap: nowrap;
+
   > .user {
     text-align: center;
-    @include border(red);
     white-space: nowrap;
     padding-right: 10px;
     padding-left: 10px;
   }
 }
+
 //滚动条样式
 ::-webkit-scrollbar {
   display: none;
