--- a/src/style/About.scss
+++ b/src/style/About.scss
@@ -1,15 +1,19 @@
-
 @mixin add {
-	border:1px solid black;
+  border: 1px solid black;
 }
-.Question{
-	overflow-y: auto;
-	height: 500px;
-	padding-right: 50px;
-	@include add();
-	img{
-		max-width: 100%;
-		max-height: 100%;
-	}
+
+.Question {
+  overflow-y: auto;
+  padding: 10px 20px;
+  //@include add();
+  img {
+    max-width: 100%;
+    max-height: 100%;
+  }
+
+  p {
+    text-indent: 20px;
+
+  }
 
 }
