--- a/src/style/Route.module.css
+++ b/src/style/Route.module.css
@@ -1,16 +1,20 @@
 .title {
-  display: flex;
-  flex-direction: row;
-  background: #fafafa;
-  width: 100%;
+    display: flex;
+    flex-direction: row;
+    width: 100%;
 }
+
 .nav {
-  width: 100%;
+    width: 100%;
 }
 
 .link {
-  flex: 1;
-  text-align: center;
-  text-decoration: none;
-  color: black;
+    flex: 1;
+    text-align: center;
+    text-decoration: none;
+    color: black;
+}
+
+.selected {
+    background: chocolate;
 }
