--- a/src/style/Search.scss
+++ b/src/style/Search.scss
@@ -7,14 +7,16 @@
 @mixin log($red) {
   border: 1px solid $red;
 }
+
 .Search {
   height: 52px;
   display: flex;
   justify-content: space-between;
   border-bottom: 1px solid rgb(153, 154, 156);
+
   input {
     height: 32px;
-    background-color: hsla(0,0%,92.2%,.72);
+    background-color: hsla(0, 0%, 92.2%, .72);
     border-radius: 16px;
     color: #999;
     display: flex;
@@ -23,13 +25,15 @@
     padding-left: 10px;
     outline: none;
   }
+
   button {
     margin-left: 30px;
     outline: none;
     border-radius: 4px;
   }
 }
-.logo{
+
+.logo {
   height: 32px;
   padding-right: 20px;
 }
@@ -42,13 +46,18 @@ $height: $width + 10px;
   justify-content: center;
   align-items: center;
   background: rgb(255, 255, 255);
-  button{
+
+  button {
     background: rgb(0, 132, 255);
   }
 }
-#root {
+
+#search {
+  display: flex;
+  flex-direction: row;
 }
-.icon{
+
+.icon {
   width: 56px;
   height: 28px;
 }
